[gd_scene load_steps=9 format=3 uid="uid://cwpire6xjlnbs"]

[ext_resource type="Texture2D" uid="uid://cijiqwidl44dg" path="res://Assets/Stages/05/Enemies/Enemy5.png" id="1_5x7bf"]
[ext_resource type="Script" path="res://Scenes/Stages/Stage5/Enemies/planet_5.gd" id="1_m1igg"]
[ext_resource type="PackedScene" uid="uid://cdqkj8qu45htr" path="res://Scenes/Stages/Stage5/Enemies/moon_5.tscn" id="2_5gf8h"]
[ext_resource type="PackedScene" uid="uid://hvjgou0g2epr" path="res://Scenes/run_away_area.tscn" id="3_gqv7o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sieqm"]
radius = 47.1699

[sub_resource type="Animation" id="Animation_ritef"]
resource_name = "ColorShiftPlanet"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.196078, 0.509804, 1, 1), Color(1, 0.196078, 0.509804, 1), Color(0.196078, 1, 0.196078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pmdn"]
_data = {
"ColorShiftPlanet": SubResource("Animation_ritef")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tpeid"]
radius = 50.01

[node name="Planet5" type="RigidBody2D" groups=["Enemy", "Planet"]]
collision_layer = 21
collision_mask = 21
gravity_scale = 0.0
linear_damp = 4.0
script = ExtResource("1_m1igg")
moon5 = ExtResource("2_5gf8h")

[node name="EnemySprite" type="Sprite2D" parent="."]
modulate = Color(0.196078, 0.509804, 1, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_5x7bf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_sieqm")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ColorShiftPlanet"
libraries = {
"": SubResource("AnimationLibrary_2pmdn")
}

[node name="RunAwayArea" parent="." instance=ExtResource("3_gqv7o")]
visible = false
scale = Vector2(0.3, 0.3)
collision_layer = 4
collision_mask = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_tpeid")

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_sieqm")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
